--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,4 +20,4 @@ jobs:
         fi
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
-      if: $${{ CREATE_PULL_REQUEST == '1' }}
+      if: $${{ env.CREATE_PULL_REQUEST == '1' }}
