--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,6 +11,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
+    - run: npm i
     - run: |
         node parser.js > list.new.txt
         if [ "$(diff list.txt list.new.txt)" ]; then
