--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,10 +19,12 @@ jobs:
           mv list.new.txt list.txt
           echo "CREATE_PULL_REQUEST=1" >> $GITHUB_ENV
           echo "NOW=$(date +'%Y-%m-%d_%H.%M.%S')" >> $GITHUB_ENV
+        else
+          echo "Nothing to do"
         fi
     - name: Create Pull Request
       uses: peter-evans/create-pull-request@v3
       if: $${{ env.CREATE_PULL_REQUEST == '1' }}
       with:
         title: Update domain list
-        branch: ${{ env.NOW }}-update-domain-names
+        branch: ${{ env.NOW }}-update-domain-list
