--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,8 +1,8 @@
 name: Update
 
-on:
-  schedule:
-  - cron: '0 8 * * 6'
+on: push
+  # schedule:
+  # - cron: '0 8 * * 6'
 
 jobs:
   build:
@@ -13,6 +13,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
+    - run: date && exit 1
     - run: npm i
     - run: |
         node parser.js > list.new.txt
