--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,8 +2,9 @@ name: Update
 
 on:
   schedule:
+    - cron: '0 11 * * 1'
+    - cron: '0 11 * * 3'
     - cron: '0 11 * * 5'
-    - cron: '0 11 * * 2'
   push:
     branches:
       - master
@@ -17,7 +18,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: 14.x
-    - run: npm i
+    - run: npm i --no-save
     - run: |
         node parser.js > data/list.new.txt
         cd data/
